# ue-forge

./: .gitignore  LICENSE  README.md  README_RU.md  pyproject.toml  requirements.txt
framekit/: __init__.py  app.py  config.py  icons.py  localization.py  platform.py  styles.py  types.py
framekit/dialogs/: __init__.py  message_dialog.py  settings_dialog.py
framekit/shell/: __init__.py  host_window.py  page_protocol.py  single_page_shell.py
framekit/widgets/: __init__.py  console_widget.py  path_input.py  status_badge.py
pyside_frameless/: __init__.py  drop_overlay.py  frameless_window.py
specs/: commandlet_runner.spec  include_optimizer.spec  plugin_builder.spec  renamer.spec  ue_forge.spec
ue_forge/: __init__.py  __main__.py  assets.py  config.py  platform.py
ue_forge/commandlet_runner/: __init__.py  __main__.py  core.py  page.py  strings.py
ue_forge/commandlet_runner/docs/: README.md  README_RU.md
ue_forge/host/: __init__.py  host_window.py  page_protocol.py  single_page_shell.py
ue_forge/include_optimizer/: __init__.py  __main__.py  core.py  page.py  strings.py
ue_forge/include_optimizer/docs/: README.md  README_RU.md
ue_forge/plugin_builder/: __init__.py  __main__.py  advanced_options_dialog.py  builder.py  command_dialog.py  engine_entry_dialog.py  engine_finder.py  engines_settings_tab.py  info_card.py  page.py  strings.py  types.py
ue_forge/plugin_builder/docs/: README.md  README_RU.md
ue_forge/renamer/: __init__.py  __main__.py  core.py  page.py  strings.py
ue_forge/renamer/docs/: README.md  README_RU.md
ue_forge/shared/: __init__.py  config.py  icons.py  localization.py  platform_utils.py  styles.py  types.py
ue_forge/shared/dialogs/: __init__.py  (+2 more)
(+5 files in other folders)
